@@ -94,7 +94,7 @@ Of course, you want the workers to start after reboot and each way to control
 them. Read on how to use Resque::Forker with Upstart.
 
 
-== Using Upstart and Capistrano
+== Using Upstart
 
 If you're running a recent release of Ubuntu, you can get Upstart to manage your
 workers.
@@ -121,25 +121,27 @@ To start, stop, check status and reload:
   $ reload workers
 
 You need to be root to start/stop the workers. However, if you change ownership
-of the workers (see fork.user above) you can reload them as that user. You can
-do something like this in your Capfile:
-
-  namespace :workers do
-    task :pause do
-      run "status workers | cut -d ' ' -f 4 | xargs kill -USR2"
-    end
-    task :resume do
-      run "status workers | cut -d ' ' -f 4 | xargs kill -CONT"
-    end
-    task :reload do
-      run "reload workers"
-    end
-  end
-  after "deploy:update_code", "workers:reload"
+of the workers (see fork.user above) you can reload them as that user.
 
 Because of the way Upstart works, there is no need for PID file or running as
 daemon. Yay for sane process supervisors! When you reload workers,
 Resque::Forker reloads itself (and the application) while keeping the same PID.
+
+
+== Using Capistrano
+
+Make sure to require "resque/capistrano" at the top of your Capfile and
+associate worker instances with the roles :worker.
+
+You now have four new task:
+* workers:pid -- Lists PID and additional information for all worker processes.
+* workers:suspend -- Suspends all workers (do not pick any new jobs).
+* workers:resume -- Resumes all workers.
+* workers:reload -- Reloads all workers.
+
+For convenience, the workers:reload task is wired to execute after
+deploy:restart. In addition, workers:suspend executes before
+deploy:web:disable, and workers:resume after deploy:web:enable.
 
 
 == Troubleshooting
